--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-
+<html>
+  <head>
+    <style>
+      #camera {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      #image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('test.png');
+        background-size: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="camera">
+      <video id="video" autoplay></video>
+      <div id="image"></div>
+    </div>
+    <script>
+      const video = document.getElementById('video');
+      navigator.mediaDevices
+        .getUserMedia({
+          video: { facingMode: 'environment' },
+        })
+        .then((stream) => {
+          video.srcObject = stream;
+        })
+        .catch((err) => {
+          console.error('Error accessing camera', err);
+        });
+    </script>
+  </body>
+</html>
