--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       #camera {
         width: 100%;
@@ -7,6 +8,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+      video {
+        width: 100%;
+        height: 100%;
       }
       #image {
         position: absolute;
